--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -33,6 +33,10 @@
                     <option value="1">Grayscale</option>
                     <option value="2">Blur</option>
                     <option value="3">Canny</option>
+                    <option value="4">para RGB</option>
+                    <option value="5">para HSV</option>
+                    <option value="6">para HSL</option>
+                    <option value="4">para RGB</option>
                 </select>
                 <input type="number" name="Amount">
                 <input type="submit" class="subInputs" value="Processar Imagem">
@@ -45,7 +49,6 @@
     </div>
 </body>
 <script>
-
     //downloadImage("C:/programacao/Ciringas_Images_ToolKit/.temp/images/7b53e78f-517a-466f-9442-382eae6299e3.png")
     async function downloadImage(psUrl) {
             try{
@@ -62,12 +65,13 @@
                     body:JSON.stringify(data)
                 })
                 const blob = await request.blob();
+                const file_type = blob.type.replace("image/","")
                 // Cria um URL para o blob
                 const res_url = window.URL.createObjectURL(blob);
                 // Cria um link temporário para baixar a imagem
                 const link = document.createElement("a");
                 link.href = res_url;
-                link.download = "image.png"; // Nome do arquivo a ser baixado
+                link.download = `image.${file_type}`; // Nome do arquivo a ser baixado
                 document.body.appendChild(link);
 
                 // Aciona o download
@@ -84,7 +88,6 @@
             }
     }
     
-
     document.getElementById('form1').addEventListener('submit', async function(event) {
             event.preventDefault(); // Impede o comportamento padrão do formulário
 
@@ -126,7 +129,7 @@
             if (response.ok) {
                 const result = await response.json(); // Processa a resposta como JSON
                 console.log('Imagem processada:', result);
-                const ptUrl = result.ResultFromPython.replace(" ","");
+                const ptUrl = result.ResultFromPython
                 console.log("image is at: "+ptUrl)
                 await downloadImage(ptUrl);
             } else {
