docker container setup

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,11 @@
 </body>
 <script src="functions/forms.js" type="module"></script>
 <script type="module" src="functions/controlRange.js"></script>
+<script src="functions/apiCalls/BgRemove.js" type="module"></script>
+<script src="functions/apiCalls/ReescaleImage.js" type="module"></script>
+<script src="functions/apiCalls/ApplyEffectToImage.js" type="module"></script>
+
+
 <style>
 
     #app{
